added a head flip and eye bug combination animation

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
 	<img class="face" src="head.png">
 	<div class="flip"><h4>Scroll here and watch me flip</h4></div>
 </div>
+
+<div id="flipANDbug">
+	<img class="face" src="head.png">
+	<img class="l_eye" src="l_eye.png">
+	<img class="r_eye" src="r_eye.png">
+	<div class="flip"><h4>This makes me flip and bug my eyes</h4></div>
+</div>
+
 </body>
 </html>
 
