fixed flip and eye bug animation, added eye roll and hulk animations

--- a/index.html
+++ b/index.html
@@ -10,34 +10,35 @@
 <link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
-<table>
-	<tr>
-		<td>	
-			<div id="head">
-				<img class="face" src="head.png">
-				<img class="l_eye" src="l_eye.png">
-				<img class="r_eye" src="r_eye.png">
-			</div>
-		</td>
-		<td>
-			<div id="othercontent">
-				<h4>Check out what happens when you scroll over the link below</h4>
-				<p><a class="bigdeal" href="">This is a big deal!</a></p>
-			</div>
-		</td>
-	</tr>
-</table>
 <div id="headflip">
 	<img class="face" src="head.png">
 	<div class="flip"><h4>Scroll here and watch me flip</h4></div>
 </div>
-
+<div id="head">
+	<img class="face" src="head.png">
+	<img class="l_eye" src="l_eye.png">
+	<img class="r_eye" src="r_eye.png">
+	<div class="bug"><h4>Scroll for response to something impressive</h4></div>
+</div>
 <div id="flipANDbug">
 	<img class="face" src="head.png">
 	<img class="l_eye" src="l_eye.png">
 	<img class="r_eye" src="r_eye.png">
 	<div class="flip"><h4>This makes me flip and bug my eyes</h4></div>
 </div>
+<div id="eyeroll">
+	<img class="face" src="head2.png">
+	<img class="l_eye" src="l_eye.png">
+	<img class="r_eye" src="r_eye.png">
+	<div class="eyeroll"><h4>Click here to see my response to something ridiculous</h4></div>
+</div>
+
+<div id="hulk">
+	<img class="face" src="head.png">
+	<img class="green" src="headgreen.png">
+	<div class="hulkout"><h4>You're not gonna like me if you click here</h4></div>
+</div>
+
 
 </body>
 </html>
